# adr-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md
backend/: .env.example  .gcloudignore  README.md  alembic.ini  main.py  pyproject.toml
backend/application/: logging.py  review_metadata.py  review_quality.py  validation.py
backend/application/commands/: create_adr.py  publish_adr.py  register_user.py  submit_adr_for_review.py  update_adr_content.py
backend/application/handlers/: run_ai_review.py
backend/application/ports/: adr_projection.py  adr_repository.py  adr_review.py  event_store.py  llm_completion.py  llm_reviewer.py  password_hasher.py  token_service.py  unit_of_work.py  user_projection.py  user_repository.py
backend/application/queries/: authenticate_user.py  get_adr.py  get_adr_review_status.py  get_current_user.py  list_adrs.py  search_adrs_by_title.py
backend/application/runtime/: dispatcher.py
backend/application/services/: adr_review_service.py
backend/domain/: __init__.py  errors.py  events.py
backend/domain/adr/: __init__.py  aggregate.py  errors.py  events.py  rehydrate.py  required_sections.py  review_actionability.py  review_instructions.py  review_llm_schema.py  template.py  value_objects.py
backend/domain/user/: __init__.py  aggregate.py  errors.py  events.py  rehydrate.py  value_objects.py
backend/infrastructure/: bootstrap.py  config.py  logging.py
backend/infrastructure/api/: dependencies.py
backend/infrastructure/llm/: errors.py  factory.py  fake_completion.py  fake_reviewer.py  openai_compatible.py  openai_sdk_client.py  openrouter.py  review_response.py
backend/infrastructure/messaging/: task_group_bus.py
backend/tests/: conftest.py  test_health.py
backend/tests/application/: test_review_quality.py  test_validation.py
backend/tests/domain/: test_adr.py  test_adr_aggregate.py  test_adr_errors.py  (+4 more)
(+272 files in other folders)
