[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.136.0",
    "psycopg[binary]>=3.3.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.0",
    "ty>=0.0.1",
]

[tool.uv]
# bootstrapper
exclude-newer = "7 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
